force-app/main/default/objects/Leave__c/fields/Date_From__c.field-meta.xml
<CustomField>
    <fullName>Date_From__c</fullName>
    <description>The start date for leave of absence.</description>
    <inlineHelpText>Enter the start date for leave of absence.</inlineHelpText>
    <label>Date From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>