force-app/main/default/objects/Leave__c/fields/Date_To__c.field-meta.xml
<CustomField>
    <fullName>Date_To__c</fullName>
    <description>The end date for the leave of absence.</description>
    <inlineHelpText>Enter end date for leave of absence.</inlineHelpText>
    <label>Date To</label>
    <required>true</required>
    <type>Date</type>
</CustomField>