force-app/main/default/objects/Leave__c/fields/Leave_For__c.field-meta.xml
<CustomField>
    <fullName>Leave_For__c</fullName>
    <description>Master Relationship between Contact &amp; Leave objects.</description>
    <inlineHelpText>Delete a contact, all leaves for associated contact are deleted. 
Delete a leave, only leave is deleted.</inlineHelpText>
    <label>Leave For</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leaves</relationshipLabel>
    <relationshipName>Leaves</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>