force-app/main/default/objects/Leave__c/fields/ofHours__c.field-meta.xml
<CustomField>
    <fullName>ofHours__c</fullName>
    <description>This represents the number of hours for leave of absence.</description>
    <inlineHelpText>Enter the number of hours for user&#39;s leave of absence.</inlineHelpText>
    <label>Number of Hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>