force-app/main/default/objects/Leave__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>The reason for user&#39;s leave of absence.</description>
    <inlineHelpText>Enter a reason for applying for leave of absence.</inlineHelpText>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>