force-app/main/default/objects/Leave__c/fields/Type_of_Leave__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Leave__c</fullName>
    <label>Type of Leave</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>