force-app/main/default/objects/Leave__c/validationRules/VR_DateFrom.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_DateFrom</fullName>
    <active>true</active>
    <description>Date cannot be in the past.</description>
    <errorConditionFormula>Date_From__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_From__c</errorDisplayField>
    <errorMessage>Date cannot be in the past.</errorMessage>
</ValidationRule>