force-app/main/default/objects/Leave__c/validationRules/VR_DateTo.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_DateTo</fullName>
    <active>true</active>
    <description>Date To cannot be less than Date From</description>
    <errorConditionFormula>Date_From__c &gt;  Date_To__c</errorConditionFormula>
    <errorDisplayField>Date_To__c</errorDisplayField>
    <errorMessage>Date To must be greater than Date From</errorMessage>
</ValidationRule>